# keel

./: .gitignore  LICENSE.txt  LICENSING.md  README.md  SECURITY.md  SKILL.md  marketplace.json  pyproject.toml
.claude-plugin/: marketplace.json
keel/: __main__.py  demo.py
keel/actuation/: approval_parser.py  engine.py  quarantine.py  receipt_builder.py  rollback.py  validator.py  wal.py
keel/adapters/: base.py  gmail.py  gmail_client.py
keel/cli/: backend.py  cloud_client.py  cloud_config.py  cloud_queue.py  local_backend.py  main.py  output.py
keel/core/: context_manager.py  fidelity.py  policy_store.py  schemas.py
keel/integration/: fidelity_suite.py
keel/telemetry/: events.py
plugins/keel/.claude-plugin/: plugin.json
plugins/keel/skills/keel/: SKILL.md
tests/cli/: test_flag_positions.py  test_policy_check_wal_side_effect.py
